--- a/src/Styles/_song.scss
+++ b/src/Styles/_song.scss
@@ -17,3 +17,10 @@
     }
 }
 
+@media screen and (max-width: 768px){
+    .song-container{
+        img{
+            width: 60%;
+        }
+    }
+}
