--- a/src/Styles/_library.scss
+++ b/src/Styles/_library.scss
@@ -19,7 +19,8 @@
     display: flex;
     align-items: center;
     padding: 1rem 2rem 1rem 2rem;
-    cursor: pointer;    
+    cursor: pointer; 
+    transition: background 0.5s ease;   
     img{
         width: 30%;
     }
@@ -71,4 +72,10 @@
 .active-library{
     transform: translateX(0%);
     opacity: 1;
+}
+
+@media screen and (max-width: 768px){
+    .library{
+        width: 100%;
+    }
 }
