--- a/src/Styles/app.scss
+++ b/src/Styles/app.scss
@@ -16,6 +16,16 @@ h3,h4{
     font-weight: 400;
     color: rgb(100, 100, 100);
 }
+
+.App{
+    transition: all 0.5s ease;
+
+}
+
+.library-active{
+    margin-left: 10%;
+}
+
 @import "./song";
 @import "./player";
 @import "./library";
