--- a/src/Styles/_player.scss
+++ b/src/Styles/_player.scss
@@ -25,6 +25,12 @@ input[type="range"]:focus{
     outline: none;
 }
 
+input[type="range"]::-moz-range-thumb{
+    -webkit-appearance: none;
+    background: transparent;
+    border:none;
+}
+
 input[type="range"]::-webkit-slider-thumb{
     -webkit-appearance: none;
     height: 16px;
