--- a/src/Styles/_library.scss
+++ b/src/Styles/_library.scss
@@ -6,7 +6,7 @@
     height: 100%;
     background: white;
     box-shadow: 2px 2px 50px rgb(199, 197, 197);
-    overflow: scroll;
+    overflow: auto;
     transform: translateX(-100%);
     transition: all 0.5s ease;
     opacity:0;
